# polypore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
app/: Makefile  docker-compose.yml
app/backend/: .env_example  Dockerfile  Makefile  pyproject.toml
app/backend/app/: main.py  settings.py
app/backend/app/db/: core.py
app/backend/app/exceptions/: api.py
app/backend/app/models/: booking.py  item.py  loan.py  shoot.py
app/backend/app/routers/: bookings.py  dashboard.py  items.py  loans.py  returns.py  shoots.py
app/backend/app/schemas/: base.py  bookings.py  dashboard.py  errors.py  items.py  loans.py  shoots.py
app/backend/app/services/: availability.py  bookings.py  items.py  loans.py  shoots.py
app/front/: .env_example  .gitignore  Dockerfile  Makefile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf.template  package.json  tsconfig.json  vite.config.ts
app/front/src/: api.ts  index.css  main.tsx
app/front/src/components/: AddressInput.tsx  DateRangePicker.tsx  TimeInput.tsx  index.ts
app/front/src/components/ui/: Alert.tsx  Avatar.tsx  Button.tsx  Card.tsx  Input.tsx  MapView.tsx  Modal.tsx  ShareMenu.tsx  Table.tsx  Tile.tsx  Timeline.tsx  index.ts
app/front/src/lib/: geocoding.ts  utils.ts
app/front/src/pages/: Bookings.tsx  Dashboard.tsx  Inventory.tsx  Loans.tsx  Shoots.tsx  Stock.tsx
app/front/src/types/: index.ts
