[project]
name = "polypore-backend"
version = "0.1.0"
description = "Polypore inventory API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.117.1",
  "uvicorn[standard]==0.37.0",
  "sqlmodel==0.0.25",
  "pydantic==2.11.9",
  "pydantic-settings==2.11.0",
]

[dependency-groups]
dev = [
  "ruff==0.13.2",
  "pytest==8.4.2",
] 